@@ -7,6 +7,7 @@ version 0.8 - XX-Jul-2009
  . ColorLayer: uses floats instead of ints for its size (issue #339)
  . ColorLayer: updates contentSize when when size is used (issue #443)
  . Menu: MenuItems works with anchorPoint correctly (issue #412)
+ . Menu: ItemLabel disabled color is configurable. color is saved (issue #366)
  . Particle: VBO update only the needed particles (issue #367)
  . TextureMgr: new (and recommended) way to add CGImages (issue #349)
  . TouchDispatcher: retains/releases the delegates (issue #422)
